tests/ui/macros/issue-61053-duplicate-binder.stderr
error: duplicate matcher binding
  --> $DIR/issue-61053-duplicate-binder.rs:7:20
   |
LL |             ($x:tt $x:tt) => { $x };
   |              --    ^^ duplicate binding
   |              |
   |              previous binding
   |
note: the lint level is defined here
  --> $DIR/issue-61053-duplicate-binder.rs:1:9
   |
LL | #![deny(meta_variable_misuse)]
   |         ^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

